# aws_ple_for_financial

./: .dockerignore  .env.example  .gitignore  .sagemaker-ignore  AGENTS.md  CLAUDE.md  COMPLIANCE_GAPS.md  LOCAL_TEST_GUIDE.md  README.md  README_ko.md  _santander_ablation_wrapper.py  local_resource_estimator_design.md  pyproject.toml  requirements.txt
adapters/: __init__.py  bank_churners.py  ealtman2019_adapter.py  santander_adapter.py
aws/: athena.py  s3.py
configs/: feature_groups.yaml  mcc_hierarchy.yaml  merged_config.json  monitoring.yaml  pipeline.yaml  recommendation.yaml
containers/: __init__.py  path_resolver.py
core/: __init__.py  config_utils.py
docs/: README.md  ablation_report_20260320-230704.html  aws_build_plan.md  aws_work_plan.md  duckdb-case-study.md  e2e_test_report_20260320.html  onprem_to_aws_import_plan.md  onprem_v2_validation_checklist.md  onprem_work_plan.md  operational_scaling_guide.md  paper3_restructure_plan.md  pipeline_comparison_matrix.md  todo_post_deployment.md
outputs/: gate_entropy_analysis.json
paper/: 00_project_background.md  01_architecture_positioning.md  02_regulatory_compliance.md  03_infrastructure_rationale.md  04_benchmark_data_design.md  05_ablation_design.md  06_distillation_and_serving.md  07_team_and_methodology.md  08_anthropic_case_study.md  09_related_work.md  10_paper_outline.md  11_paper2_outline.md  12_onprem_analysis.md  13_expert_selection_rationale.md  14_expert_theory_part1.md  14_expert_theory_part2.md  14_expert_theory_part3.md  14_expert_theory_part4.md  README.md
plugins/: README.md
(+558 files in other folders)
